--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,124 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* Reset default body styles */
+body {
+  @apply m-0 leading-[1.15];
+}
+.home-container{
+  @apply max-w-[1260px] m-auto
+}
+/* Main container styling */
+.main-container {
+  @apply flex flex-col relative h-full bg-white py-3;
+}
+
+/* Items container styling */
+.items-container {
+  @apply max-w-[3000px] flex justify-center items-center xl:max-w-[3000px] overflow-x-hidden;
+}
+
+/* Image Grid Container */
+.image-grid-container {
+  @apply max-w-[1280px] mx-auto px-4 bg-transparent overflow-x-hidden;
+}
+
+.image-grid {
+  @apply grid gap-4 grid-cols-[repeat(auto-fill,_minmax(100px,_1fr))];
+}
+
+/* Horizontal Image Slider */
+.horizontal-image-slider {
+  @apply flex gap-4 overflow-x-auto ;
+}
+
+.horizontal-image-slider::-webkit-scrollbar {
+  @apply hidden;
+}
+
+/* Horizontal Card List */
+.horizontal-card-list {
+  @apply flex gap-0 overflow-x-auto pb-2;
+}
+
+.horizontal-card-list::-webkit-scrollbar {
+  @apply hidden;
+}
+
+/* Card styles */
+.card {
+  @apply bg-white  border-l-[0.5px] border-y-[0.5px] transition-transform duration-200  shadow-[2px_2px_8px_rgba(0,0,0,0.04)];
+  text-align: inherit !important;
+}
+/* .card:not(:first-child){
+  @apply border-[0.5px]
+} */
+.card:first-child{
+  @apply border-[0.5px] border-r-0
+}
+.card:last-child{
+  @apply border-[0.5px]
+}
+.card-content{
+  @apply flex flex-col px-3 items-center   h-full 
+}
+.card-details{
+  @apply flex-1 flex flex-col gap-2 w-full
+}
+.card-eta{
+  @apply bg-gray-200 px-1 py-[2px] text-[9px] w-fit rounded-sm font-medium
+}
+.card-titles{
+  @apply flex-1 flex flex-col
+}
+.card-unit{
+  @apply flex-1 text-[14px] mt-1 font-extralight
+}
+.card-title{
+  @apply line-clamp-2
+}
+.card-title,.card-price{
+  @apply text-[13px] font-medium
+}
+.card-unit{
+  /* @apply mb-2 */
+}
+.card-footer{
+  @apply flex flex-1 justify-between text-center items-center py-3
+}
+.card-button{
+  @apply px-5 py-2 bg-[rgba(240,253,244,0.5)] border text-[12px] border-green-600 rounded-md text-green-700 font-medium
+}
+/* Product details */
+.horizontal-card-list:has(.slidecard){
+  @apply gap-2
+}
+.slidecard{
+  @apply min-w-fit
+}
+.slidecard .card-content{
+  @apply p-1
+}
+/* Section styling */
+.section {
+  @apply mt-6 px-4;
+}
+
+.section-title {
+  @apply text-xl font-bold mb-4 text-gray-800;
+  color: rgb(28, 28, 28);
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+}
+
+/* Banner container */
+.banner-container {
+  @apply mb-6 w-full max-w-[1280px] overflow-x-hidden;
+}
+
+/* Image styles */
+img {
+  @apply max-w-full h-auto block;
+}
+
